syntax = "proto3";

package ast;

import "ast/schema.proto";
import "yaml/value.proto";

option go_package = "github.com/Jumpaku/eyamlate/golang/ast";

service Parser {
  rpc Parse(ParseInput) returns (ParseOutput) {}
  rpc ParseExpr(ParseExprInput) returns (ParseExprOutput) {}
  rpc ParseEval(ParseExprInput) returns (ParseExprOutput) {}
  rpc ParseScalar(ParseExprInput) returns (ParseExprOutput) {}
  rpc ParseNewObj(ParseExprInput) returns (ParseExprOutput) {}
  rpc ParseNewArr(ParseExprInput) returns (ParseExprOutput) {}
  rpc ParseValJson(ParseExprInput) returns (ParseExprOutput) {}
  rpc ParseRangeIter(ParseExprInput) returns (ParseExprOutput) {}
  rpc ParseElemAccess(ParseExprInput) returns (ParseExprOutput) {}
  rpc ParseFunCall(ParseExprInput) returns (ParseExprOutput) {}
  rpc ParseCaseBranches(ParseExprInput) returns (ParseExprOutput) {}
  rpc ParseOpUnary(ParseOpUnaryInput) returns (ParseExprOutput) {}
  rpc ParseOpBinary(ParseOpBinaryInput) returns (ParseExprOutput) {}
  rpc ParseOpVariadic(ParseOpVariadicInput) returns (ParseExprOutput) {}
}
message ParseInput {
  string source = 1;
}
message ParseOutput {
  enum Status {
    OK = 0;
    DECODE_ERROR = 1;
    VALIDATE_ERROR = 2;
    PARSE_ERROR = 3;
  }
  Status status = 1;
  string error_message = 2;
  ParseErrorCode parse_error_code = 3;
  Path parse_error_path = 4;
  Expr expr = 5;
}
enum ParseErrorCode {
  OK = 0;
  UNSUPORTED_KEYS = 1;
  UNEXPECTED_LENGTH = 2;
  UNEXPECTED_TYPE = 3;
  UNKNOWN = 4;
}
message ParseExprInput {
  Path path = 1;
  yaml.Value value = 2;
}
message ParseExprOutput {
  ParseErrorCode code = 1;
  Path error_path = 2;
  string error_message = 3;
  Expr expr = 4;
}
message ParseOpUnaryInput {
  Path path = 1;
  ast.OpUnary.Operator operator = 2;
  yaml.Value value = 3;
}
message ParseOpBinaryInput {
  Path path = 1;
  ast.OpBinary.Operator operator = 2;
  yaml.Value value = 3;
}
message ParseOpVariadicInput {
  Path path = 1;
  ast.OpVariadic.Operator operator = 2;
  yaml.Value value = 3;
}
